[package]
name = "tools"
version = "0.1.0"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
rand_chacha = "=0.3.1"
rand_distr = "=0.4.3"
itertools = "=0.13.0"
proconio = { version = "=0.5.0", features = ["derive"] }
svg = "0.18.0"
clap = { version = "4.0", features = ["derive"] }
delaunator = "1.0.2"
anyhow = "1.0.94"

[profile.dev]
overflow-checks = false

[profile.test]
overflow-checks = false

[[bin]]
name = "gen"
path = "src/bin/gen.rs"

[[bin]]
name = "vis"
path = "src/bin/vis.rs"
